# physical-ai-textbook-chatbot-backend

./: Dockerfile  agent.py  gemini_config.py  main.py  pyproject.toml  requirements.txt  tools.py  vercel.json
.claude/: settings.local.json
api/: index.py
